cargo-features = ["profile-rustflags"]

[package]
name = "kdtree-ray"
version = "1.2.1"
authors = ["Florian Amsallem <florian.amsallem@epita.fr>"]
description = "Fast Kdtree implementation for raytracer"
documentation = "https://docs.rs/kdtree-ray"
repository = "https://github.com/flomonster/kdtree-ray"
homepage = "https://github.com/flomonster/kdtree-ray"
edition = "2018"
license = "MIT"
keywords = ["kdtree", "raytracer", "3D", "sah"]
exclude = [".github/"]

[unstable]
mtime-on-use = true
build-std = ["core", "alloc"]
build-std-features = ["build-std-features=panic_immediate_abort"]

[dependencies]
nalgebra = { version = "*", default-features = false, features = ["libm", "libm-force", "alloc"] }
enum-map = "2.7.0"
hashbrown = "0.14.2"
